--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,7 +33,7 @@ jobs:
             docker-compose --file docker-compose.yml up -d
 
             for ((i=0; i<15; i++)); do
-              if [ ! docker-compose exec -T $IMAGE_NAME find /usr/src/app/.env ]; then
+              if [ docker-compose exec -T $IMAGE_NAME [ ! -f /usr/src/app/.env ] ]; then
                 echo "No .env file exist"
                 sleep 1
               else
