Add Account functions -backend

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,8 @@ django-debug-toolbar
 django-environ
 django-filter
 djangorestframework
+djangorestframework-simplejwt
+djoser
+python-dotenv
 psycopg2
 gunicorn
