--- a/backend/startup/nginx.conf
+++ b/backend/startup/nginx.conf
@@ -8,6 +8,9 @@ server {
 
         access_log /var/log/nginx/access_log;
 
+        add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=(), interest-cohort=()" always;
+        add_header Expect-CT "max-age=7776000, enforce" always;
+
         location = /favicon.ico {
                 access_log off; 
                 log_not_found off; 
