--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
+    "bundle-loader": "^0.5.6",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
@@ -19,13 +20,16 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0"
   },
   "eslintConfig": {
     "root": true,
