Add HSTS header

--- a/backend/startup/nginx.conf
+++ b/backend/startup/nginx.conf
@@ -10,6 +10,7 @@ server {
 
         add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=(), interest-cohort=()" always;
         add_header Expect-CT "max-age=7776000, enforce" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         location = /favicon.ico {
                 access_log off; 
