Add django unittest

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,5 +41,8 @@ jobs:
                 break
               fi
             done
+            
+            echo "start django unittest"
+            docker-compose exec -T $IMAGE_NAME python3 /usr/src/app/manage.py test
 
           fi
