--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,20 @@
-Django
-django-cors-headers
-django-debug-toolbar
-django-environ
-django-filter
 PyJWT==2.1.0
-djangorestframework
-djangorestframework-simplejwt
-djoser
-django-cleanup
-pillow
-django-imagekit
-django-storages
-social-auth-app-django
-django-csp
-boto3
-python-dotenv
-psycopg2
-gunicorn
+boto3==1.18.64
+Django==3.2.8
+django-cleanup==5.2.0
+django-cors-headers==3.10.0
+django-csp==3.7
+django-debug-toolbar==3.2.2
+python-dotenv==0.19.1
+django-environ==0.8.0
+django-filter==21.1
+django-imagekit==4.0.2
+django-storages==1.12.2
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+gunicorn==20.1.0
+pillow==8.4.0
+psycopg2==2.9.1
+social-auth-app-django==4.0.0
+factory-boy==3.2.0
